[gd_scene load_steps=10 format=2]

[ext_resource path="res://ExitPortal/ExitPortalOrangeMaterial.tres" type="Material" id=1]
[ext_resource path="res://ExitPortal/ExitPortal.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 5, 0.1, 2 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.25098, 0.25098, 0.25098, 1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 3, 4, 0.1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.478431, 0.478431, 0.478431, 1 )

[sub_resource type="CylinderMesh" id=3]
top_radius = 0.3
bottom_radius = 0.3
height = 1.5
radial_segments = 8

[sub_resource type="BoxShape" id=5]
extents = Vector3( 9.17825, 2.1363, 1 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1.06244, 2.1363, 1 )

[node name="ExitPortal" type="Spatial"]
script = ExtResource( 2 )

[node name="Graphics" type="Spatial" parent="."]

[node name="Base" type="MeshInstance" parent="Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 7 )

[node name="Back" type="MeshInstance" parent="Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -0.9 )
mesh = SubResource( 2 )
material/0 = SubResource( 8 )

[node name="Frame" type="CSGCombiner" parent="Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -0.728592 )

[node name="OuterFrame" type="CSGBox" parent="Graphics/Frame"]
width = 3.0
height = 4.0
depth = 0.5
material = ExtResource( 1 )

[node name="InnerFrame" type="CSGBox" parent="Graphics/Frame"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.273888, 0 )
operation = 2
height = 3.5
material = ExtResource( 1 )

[node name="PillarLeft" type="MeshInstance" parent="Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.00647, 0.75, -0.5 )
mesh = SubResource( 3 )
material/0 = ExtResource( 1 )

[node name="LightLeft" type="OmniLight" parent="Graphics/PillarLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18087, 0 )
light_energy = 0.0

[node name="PillarRight" type="MeshInstance" parent="Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95641, 0.75, -0.5 )
mesh = SubResource( 3 )
material/0 = ExtResource( 1 )

[node name="LightRight" type="OmniLight" parent="Graphics/PillarRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00623369, 1.18087, 0 )
light_energy = 0.0

[node name="PlayerApproachArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.013937, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="PlayerApproachArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.10793, 0 )
shape = SubResource( 5 )

[node name="PlayerInteractArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="PlayerInteractArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.10793, 0 )
shape = SubResource( 6 )

[node name="RightLightTween" type="Tween" parent="."]

[node name="LeftLightTween" type="Tween" parent="."]
[connection signal="body_entered" from="PlayerApproachArea" to="." method="_on_PlayerApproachArea_body_entered"]
[connection signal="body_exited" from="PlayerApproachArea" to="." method="_on_PlayerApproachArea_body_exited"]
[connection signal="body_entered" from="PlayerInteractArea" to="." method="_on_PlayerInteractArea_body_entered"]
